<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myForm">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="275dp"
                android:layout_height="34dp"
                android:layout_marginTop="8dp"
                android:text="@string/filling"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.588"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnProgram1ID" />

            <LinearLayout
                android:id="@+id/EDageI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <EditText
                    android:id="@+id/EdfirstnameID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="56dp"
                    android:ems="10"
                    android:hint="@string/firstname"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/EDmidlenameID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="MIDDLE NAME"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/EDlastnameID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="56dp"
                    android:ems="10"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edageiD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="ENTER YOUR AGE"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edDoBID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="56dp"
                    android:ems="10"
                    android:hint="DATE OF BIRTH"
                    android:inputType="textPersonName" />


                <EditText
                    android:id="@+id/maritalID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="MARITAL STATUS"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/EDnationalityID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="NATIONALITY"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/EDreligionID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="RELIGION"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/EDadressFocommunicationID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="ADDRESS FOR COMMUNUCATION"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/EDphonnumID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="PHONE NUMBER"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/EDemailforStudentID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="EMAIL"
                    android:inputType="textPersonName" />
                <EditText
                    android:id="@+id/EDtribID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="TRIBE"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/sponsorDetailsID"
                    android:layout_width="367dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:text=" ENTER SPONSOR's DETAILS IN THE FIELDS BELOW"
                    android:textColor="#FF9800"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/EDsponsorNameComID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="SPONSOR's NAME"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/EDparentornComID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="PARENT / GUARDIAN "
                    android:inputType="textPersonName" />
                <EditText
                    android:id="@+id/EDsponserAddresComID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="ENTER SPONSOR'S ADDRESS "
                    android:inputType="textPersonName" />
                <EditText
                    android:id="@+id/EDsponsorPhoneID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="SPONSOR'S PHONE NUMBER"
                    android:inputType="textPersonName" />
                <EditText
                    android:id="@+id/EDsponsorEmailID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="SPONSOR's EMAIL"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/couseSelectionID"
                    android:layout_width="367dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:text=" TYPE THE PROGRAMME OF STUDY IN THE ORDER OF  PREFERENCE "
                    android:textColor="#FF9800"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/EDfirstID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="FIRST PRIORITY "
                    android:inputType="textPersonName" />
                <EditText
                    android:id="@+id/EDsencondID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="SECOND PRIORITY"
                    android:inputType="textPersonName" />
                <EditText
                    android:id="@+id/EDthirdID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ems="10"
                    android:hint="THIRD PRIORITY"
                    android:inputType="textPersonName" />
                <Button
                    android:id="@+id/btnSubmitID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Submit"/>





            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

  </androidx.constraintlayout.widget.ConstraintLayout>